// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker should render 1`] = `
<div
  aria-disabled={false}
  className="date-picker-root"
>
  <div
    className="controls"
  >
    <div
      className="month-toggle-wrapper"
    >
      <DatePickerSelect
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "January",
              "value": "January",
            },
            Object {
              "label": "February",
              "value": "February",
            },
            Object {
              "label": "March",
              "value": "March",
            },
            Object {
              "label": "April",
              "value": "April",
            },
            Object {
              "label": "May",
              "value": "May",
            },
            Object {
              "label": "June",
              "value": "June",
            },
            Object {
              "label": "July",
              "value": "July",
            },
            Object {
              "label": "August",
              "value": "August",
            },
            Object {
              "label": "September",
              "value": "September",
            },
            Object {
              "label": "October",
              "value": "October",
            },
            Object {
              "label": "November",
              "value": "November",
            },
            Object {
              "label": "December",
              "value": "December",
            },
          ]
        }
        selected="January"
      />
      <DatePickerSelect
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": 1975,
              "value": 1975,
            },
            Object {
              "label": 1974,
              "value": 1974,
            },
            Object {
              "label": 1973,
              "value": 1973,
            },
            Object {
              "label": 1972,
              "value": 1972,
            },
            Object {
              "label": 1971,
              "value": 1971,
            },
            Object {
              "label": 1970,
              "value": 1970,
            },
          ]
        }
        selected="1970"
      />
    </div>
    <Button
      disabled={true}
      monospaced={true}
      onClick={[Function]}
      size="sm"
    >
      <Icon
        symbol="angle-left"
      />
    </Button>
    <Button
      className="current-day-btn"
      disabled={true}
      monospaced={true}
      onClick={[Function]}
      size="sm"
    >
      •
    </Button>
    <Button
      monospaced={true}
      onClick={[Function]}
      size="sm"
    >
      <Icon
        symbol="angle-right"
      />
    </Button>
  </div>
  <div
    className="picker-body"
  >
    <Calendar
      currentMonth={"1970-01-01T00:00:00.000Z"}
      date={"1970-01-01T00:00:00.000Z"}
      minDate={"1970-01-01T00:00:00.000Z"}
      onSelect={[Function]}
    />
  </div>
</div>
`;

exports[`DatePicker should render label when a range is passed 1`] = `
<div
  aria-disabled={false}
  className="date-picker-root"
>
  <label>
    End Date
  </label>
  <div
    className="controls"
  >
    <div
      className="month-toggle-wrapper"
    >
      <DatePickerSelect
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "January",
              "value": "January",
            },
            Object {
              "label": "February",
              "value": "February",
            },
            Object {
              "label": "March",
              "value": "March",
            },
            Object {
              "label": "April",
              "value": "April",
            },
            Object {
              "label": "May",
              "value": "May",
            },
            Object {
              "label": "June",
              "value": "June",
            },
            Object {
              "label": "July",
              "value": "July",
            },
            Object {
              "label": "August",
              "value": "August",
            },
            Object {
              "label": "September",
              "value": "September",
            },
            Object {
              "label": "October",
              "value": "October",
            },
            Object {
              "label": "November",
              "value": "November",
            },
            Object {
              "label": "December",
              "value": "December",
            },
          ]
        }
        selected="January"
      />
      <DatePickerSelect
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": 1975,
              "value": 1975,
            },
            Object {
              "label": 1974,
              "value": 1974,
            },
            Object {
              "label": 1973,
              "value": 1973,
            },
            Object {
              "label": 1972,
              "value": 1972,
            },
            Object {
              "label": 1971,
              "value": 1971,
            },
            Object {
              "label": 1970,
              "value": 1970,
            },
          ]
        }
        selected="1970"
      />
    </div>
    <Button
      disabled={true}
      monospaced={true}
      onClick={[Function]}
      size="sm"
    >
      <Icon
        symbol="angle-left"
      />
    </Button>
    <Button
      className="current-day-btn"
      disabled={true}
      monospaced={true}
      onClick={[Function]}
      size="sm"
    >
      •
    </Button>
    <Button
      monospaced={true}
      onClick={[Function]}
      size="sm"
    >
      <Icon
        symbol="angle-right"
      />
    </Button>
  </div>
  <div
    className="picker-body"
  >
    <Calendar
      currentMonth={"1970-01-01T00:00:00.000Z"}
      date={
        Object {
          "end": null,
          "start": "1970-01-01T00:00:00.000Z",
        }
      }
      minDate={"1970-01-01T00:00:00.000Z"}
      onSelect={[Function]}
    />
  </div>
</div>
`;

exports[`DatePicker should render the next month 1`] = `
<div
  aria-disabled={false}
  className="date-picker-root"
>
  <div
    className="controls"
  >
    <div
      className="month-toggle-wrapper"
    >
      <DatePickerSelect
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "January",
              "value": "January",
            },
            Object {
              "label": "February",
              "value": "February",
            },
            Object {
              "label": "March",
              "value": "March",
            },
            Object {
              "label": "April",
              "value": "April",
            },
            Object {
              "label": "May",
              "value": "May",
            },
            Object {
              "label": "June",
              "value": "June",
            },
            Object {
              "label": "July",
              "value": "July",
            },
            Object {
              "label": "August",
              "value": "August",
            },
            Object {
              "label": "September",
              "value": "September",
            },
            Object {
              "label": "October",
              "value": "October",
            },
            Object {
              "label": "November",
              "value": "November",
            },
            Object {
              "label": "December",
              "value": "December",
            },
          ]
        }
        selected="February"
      />
      <DatePickerSelect
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": 1975,
              "value": 1975,
            },
            Object {
              "label": 1974,
              "value": 1974,
            },
            Object {
              "label": 1973,
              "value": 1973,
            },
            Object {
              "label": 1972,
              "value": 1972,
            },
            Object {
              "label": 1971,
              "value": 1971,
            },
            Object {
              "label": 1970,
              "value": 1970,
            },
          ]
        }
        selected="1970"
      />
    </div>
    <Button
      disabled={false}
      monospaced={true}
      onClick={[Function]}
      size="sm"
    >
      <Icon
        symbol="angle-left"
      />
    </Button>
    <Button
      className="current-day-btn"
      disabled={false}
      monospaced={true}
      onClick={[Function]}
      size="sm"
    >
      •
    </Button>
    <Button
      monospaced={true}
      onClick={[Function]}
      size="sm"
    >
      <Icon
        symbol="angle-right"
      />
    </Button>
  </div>
  <div
    className="picker-body"
  >
    <Calendar
      currentMonth={"1970-02-01T00:00:00.000Z"}
      date={"1970-01-01T00:00:00.000Z"}
      minDate={"1970-01-01T00:00:00.000Z"}
      onSelect={[Function]}
    />
  </div>
</div>
`;
